--- a/saordean_tap/saordean_tapViewController.xib
+++ b/saordean_tap/saordean_tapViewController.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{67, 181}, {184, 99}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="765030988"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -75,6 +76,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{80, 381}, {171, 168}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -82,7 +84,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Button</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="312061660">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="237027362">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -90,7 +92,7 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="148931095">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="1053441242">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
@@ -98,11 +100,11 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">increment.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="271833691">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="198323691">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="818912179">
+						<object class="NSFont" key="IBUIFont" id="129225772">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
@@ -113,6 +115,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 27}, {320, 99}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1047899246"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -122,11 +125,12 @@
 							<string key="NSResourceName">anastasi.png</string>
 						</object>
 					</object>
-					<object class="IBUIButton" id="802762304">
+					<object class="IBUIButton" id="349020835">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{236, 309}, {73, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -134,18 +138,19 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Button</string>
-						<reference key="IBUIHighlightedTitleColor" ref="312061660"/>
+						<reference key="IBUIHighlightedTitleColor" ref="237027362"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="148931095"/>
-						<reference key="IBUIFontDescription" ref="271833691"/>
-						<reference key="IBUIFont" ref="818912179"/>
+						<reference key="IBUINormalTitleShadowColor" ref="1053441242"/>
+						<reference key="IBUIFontDescription" ref="198323691"/>
+						<reference key="IBUIFont" ref="129225772"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="674651075"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -205,7 +210,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">redButton:</string>
-						<reference key="source" ref="802762304"/>
+						<reference key="source" ref="349020835"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -224,7 +229,7 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="795877907">
+							<object class="IBNSLayoutConstraint" id="469181062">
 								<reference key="firstItem" ref="765030988"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
@@ -240,7 +245,7 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="341763655">
+							<object class="IBNSLayoutConstraint" id="1008766017">
 								<reference key="firstItem" ref="765030988"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -256,11 +261,11 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="378495143">
+							<object class="IBNSLayoutConstraint" id="676712710">
 								<reference key="firstItem" ref="191373211"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="802762304"/>
+								<reference key="secondItem" ref="349020835"/>
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -272,11 +277,11 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="403252398">
+							<object class="IBNSLayoutConstraint" id="1055563698">
 								<reference key="firstItem" ref="191373211"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="802762304"/>
+								<reference key="secondItem" ref="349020835"/>
 								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -288,7 +293,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="470967239">
+							<object class="IBNSLayoutConstraint" id="326289455">
 								<reference key="firstItem" ref="1047899246"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -304,7 +309,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="653569566">
+							<object class="IBNSLayoutConstraint" id="740160583">
 								<reference key="firstItem" ref="1047899246"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
@@ -320,7 +325,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="46798681">
+							<object class="IBNSLayoutConstraint" id="945291002">
 								<reference key="firstItem" ref="674651075"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
@@ -352,10 +357,10 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<reference ref="674651075"/>
 							<reference ref="765030988"/>
 							<reference ref="1047899246"/>
-							<reference ref="802762304"/>
+							<reference ref="349020835"/>
+							<reference ref="674651075"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -374,7 +379,7 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="1047899246"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="140593647">
+							<object class="IBNSLayoutConstraint" id="591232485">
 								<reference key="firstItem" ref="1047899246"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -390,7 +395,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="350424255">
+							<object class="IBNSLayoutConstraint" id="269060438">
 								<reference key="firstItem" ref="1047899246"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -413,7 +418,7 @@
 						<int key="objectID">7</int>
 						<reference key="object" ref="765030988"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="1017550085">
+							<object class="IBNSLayoutConstraint" id="581121099">
 								<reference key="firstItem" ref="765030988"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -429,7 +434,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="200301002">
+							<object class="IBNSLayoutConstraint" id="736935324">
 								<reference key="firstItem" ref="765030988"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -461,62 +466,62 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">62</int>
-						<reference key="object" ref="46798681"/>
+						<reference key="object" ref="945291002"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">64</int>
-						<reference key="object" ref="350424255"/>
+						<reference key="object" ref="269060438"/>
 						<reference key="parent" ref="1047899246"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">81</int>
-						<reference key="object" ref="140593647"/>
+						<reference key="object" ref="591232485"/>
 						<reference key="parent" ref="1047899246"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">173</int>
-						<reference key="object" ref="200301002"/>
+						<reference key="object" ref="736935324"/>
 						<reference key="parent" ref="765030988"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">178</int>
-						<reference key="object" ref="1017550085"/>
+						<reference key="object" ref="581121099"/>
 						<reference key="parent" ref="765030988"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">196</int>
-						<reference key="object" ref="653569566"/>
+						<reference key="object" ref="740160583"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">199</int>
-						<reference key="object" ref="341763655"/>
+						<reference key="object" ref="1008766017"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">200</int>
-						<reference key="object" ref="470967239"/>
+						<reference key="object" ref="326289455"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">212</int>
-						<reference key="object" ref="795877907"/>
+						<reference key="object" ref="469181062"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">213</int>
-						<reference key="object" ref="802762304"/>
+						<reference key="object" ref="349020835"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">214</int>
-						<reference key="object" ref="403252398"/>
+						<reference key="object" ref="1055563698"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">216</int>
-						<reference key="object" ref="378495143"/>
+						<reference key="object" ref="676712710"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -529,13 +534,13 @@
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="1.IBViewMetadataConstraints">
 					<reference ref="27563419"/>
-					<reference ref="46798681"/>
-					<reference ref="653569566"/>
-					<reference ref="470967239"/>
-					<reference ref="403252398"/>
-					<reference ref="378495143"/>
-					<reference ref="341763655"/>
-					<reference ref="795877907"/>
+					<reference ref="945291002"/>
+					<reference ref="740160583"/>
+					<reference ref="326289455"/>
+					<reference ref="1055563698"/>
+					<reference ref="676712710"/>
+					<reference ref="1008766017"/>
+					<reference ref="469181062"/>
 				</array>
 				<string key="173.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="178.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -551,8 +556,8 @@
 				<boolean value="NO" key="23.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="4.IBViewMetadataConstraints">
-					<reference ref="350424255"/>
-					<reference ref="140593647"/>
+					<reference ref="269060438"/>
+					<reference ref="591232485"/>
 				</array>
 				<boolean value="NO" key="4.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="47.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -560,8 +565,8 @@
 				<string key="64.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="7.IBViewMetadataConstraints">
-					<reference ref="200301002"/>
-					<reference ref="1017550085"/>
+					<reference ref="736935324"/>
+					<reference ref="581121099"/>
 				</array>
 				<boolean value="NO" key="7.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="81.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -572,7 +577,54 @@
 			<nil key="sourceID"/>
 			<int key="maxID">217</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">saordean_tapViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="blueButton:">id</string>
+						<string key="redButton:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="blueButton:">
+							<string key="name">blueButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="redButton:">
+							<string key="name">redButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="pressCountLabel">UILabel</string>
+						<string key="pressDecrementLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="pressCountLabel">
+							<string key="name">pressCountLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pressDecrementLabel">
+							<string key="name">pressDecrementLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/saordean_tapViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
